--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "chalk": "^4.1.2",
     "cids": "^1.1.9",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^2.6.1",
     "ethers": "^5.4.7",
