--- a/.sample.env
+++ b/.sample.env
@@ -1,16 +1,10 @@
 HARDHAT_NETWORK="rinkeby | mainnet"
 
-IPFS_HOST="localhost:8080 | nifty-league.com"
-
 INFURA_PROJECT_ID=""
+# Base64 infura PROJECT_ID:PROJECT_SECRET
+INFURA_AUTHORIZATION_DEV=""
+INFURA_AUTHORIZATION_PROD=""
 
 UNITY_IMAGE_GENERATOR_BASE_URL=""
 UNITY_IMAGE_GENERATOR_SECRET=""
 UNITY_IMAGE_GENERATOR_VERSION=100
-AVOID_IMAGE_OVERRIDE="true | false"
-
-# Get your JWT access token from https://pinata.cloud and paste it in here:
-PINNING_SERVICE_KEY=""
-# You can leave these values alone to use Pinata as your pinning service.
-PINNING_SERVICE_NAME="pinata"
-PINNING_SERVICE_ENDPOINT="https://api.pinata.cloud/psa"
