--- a/.sample.env
+++ b/.sample.env
@@ -8,3 +8,6 @@ INFURA_AUTHORIZATION_PROD=""
 UNITY_IMAGE_GENERATOR_BASE_URL=""
 UNITY_IMAGE_GENERATOR_SECRET=""
 UNITY_IMAGE_GENERATOR_VERSION=100
+
+S3_ACCESS_ID=""
+S3_SECRET=""
