--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chalk": "^4.1.2",
     "cids": "^1.1.9",
     "commander": "^8.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^2.6.1",
     "ethers": "^5.4.7",
