--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "aws-sdk": "^2.991.0",
+    "body-parser": "^1.19.0",
     "chalk": "^4.1.2",
     "cids": "^1.1.9",
     "commander": "^8.2.0",
