--- a/.sample.env
+++ b/.sample.env
@@ -1,4 +1,4 @@
-HARDHAT_NETWORK="rinkeby | mainnet"
+HARDHAT_NETWORK="goerli | mainnet"
 
 INFURA_PROJECT_ID=""
 # Base64 infura PROJECT_ID:PROJECT_SECRET
@@ -13,5 +13,4 @@ S3_ACCESS_ID=""
 S3_SECRET=""
 
 WEBHOOK_SECRET=""
-BLOCKNATIVE_API_DEV=""
-BLOCKNATIVE_API_PROD=""
+BLOCKNATIVE_API_DEGENS=""
